--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -10,8 +10,9 @@
 		</header>
 
 
-		<footer>
-			<div style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0;">Best School</div>
+		<footer style="background-color:#00FF00; display: flex; position: fixed; bottom: 0; height: 60px; width: 100%; align-items: center; justify-content: center;">
+            Best School
+
 		</footer>
 	</body>
 </html>
