--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,15 +4,13 @@
 		<meta charset="utf-8">
   		<title>AirBnB Clone</title>
 	</head>
-	<body>
-		<header>
-			<div style="background-color: #FF0000; height: 70px; width: 100%;"></div>
+	<body style="margin: 0; padding: 0;">
+		<header style="background-color: #FF0000; height: 70px; width: 100%;">
 		</header>
 
 
 		<footer style="background-color:#00FF00; display: flex; position: fixed; bottom: 0; height: 60px; width: 100%; align-items: center; justify-content: center;">
             Best School
-
 		</footer>
 	</body>
 </html>
