--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AirBnB clone</title>
-	<link rel="icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png">
+	<link rel="icon" href="https://github.com/JacobM311/holbertonschool-AirBnB_clone/blob/main/web_static/images/hbnb_logo.png?raw=true">
 	<link rel="stylesheet" href="styles/3-common.css">
 	<link rel="stylesheet" href="styles/3-header.css">
 	<link rel="stylesheet" href="styles/3-footer.css">
